--- a/src/app/housing-location1/housing-location1.component.html
+++ b/src/app/housing-location1/housing-location1.component.html
@@ -8,4 +8,5 @@
   <p class="listing-location">
     {{ housingLocationInput.city }}, {{ housingLocationInput.state }}
   </p>
+  <a [routerLink]="['/details', housingLocationInput.id]">Learn more ></a>
 </section>
