--- a/src/app/details/details.component.html
+++ b/src/app/details/details.component.html
@@ -16,6 +16,29 @@
   </section>
   <section class="listing-apply">
     <h2 class="section-heading">Apply now to live here</h2>
-    <button class="primary" type="button">Apply now</button>
+    <form [formGroup]="applyForm" (submit)="submitApplication()">
+      <label for="first-name">First Name</label>
+      <input
+        id="first-name"
+        type="text"
+        formControlName="firstName"
+        placeholder="First name"
+      />
+      <label for="last-name">Last Name</label>
+      <input
+        id="last-name"
+        type="text"
+        formControlName="lastName"
+        placeholder="Last name"
+      />
+      <label for="email">Email</label>
+      <input
+        id="email"
+        type="email"
+        formControlName="email"
+        placeholder="Email"
+      />
+      <button class="primary" type="submit">Apply now</button>
+    </form>
   </section>
 </article>
