--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,12 +1,14 @@
 <section>
-  <form action="">
-    <input type="text" placeholder="Filter by city" />
-    <button class="primary" type="button">Search</button>
-  </form>
+  <!--<form>-->
+  <input type="text" placeholder="Filter by city" #filter />
+  <button class="primary" type="button" (click)="filterResults(filter.value)">
+    Search
+  </button>
+  <!--</form>-->
 </section>
 <section class="results">
   <app-housing-location1
-    *ngFor="let housingLocationItem of housingLocationList"
+    *ngFor="let housingLocationItem of filteredLocationList"
     [housingLocationInput]="housingLocationItem"
   ></app-housing-location1>
 </section>
